--- a/source/styles/components/glossary/glossary.css
+++ b/source/styles/components/glossary/glossary.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 30px;
 }
 
 
@@ -33,15 +34,14 @@
 
 .glossary_title {
 	font-size: 30px;
-	margin-bottom: 18px;
 }
-
-
 
 .glossary__nav {
 	background-color: #31344C;
-	width: 100vw;
-	margin-left: calc(50% - 50vw);
+	width: 100%;
+}
+
+.glossary__nav-wrap {
 	display: flex;
 	flex-direction: column;
 	gap: 3px;
@@ -50,7 +50,6 @@
 	gap: 15px;
 	align-items: center;
 }
-
 
 
 .glossary__search {
@@ -75,6 +74,7 @@
 
 .glossary__text {
 	font-size: 18px;
+	font-weight: 300;
 }
 
 .glossary__form-button {
@@ -84,11 +84,11 @@
 }
 
 .glossary__alphabet {
-	padding-left: 40px;
+	padding-left: 20px;
 	flex-wrap: wrap;
 	column-gap: 22px;
 	row-gap: 8px;
-	max-width: 310px;
+	max-width: 320px;
 	margin: 0 auto;
 	display: none;
 }
@@ -119,7 +119,7 @@
 }
 
 .glossary__content-wrap {
-	padding: 91px 0 30px 0;
+padding-top: 71px;
 	display: flex;
 	flex-direction: column;
 	gap: 18px;
@@ -151,7 +151,18 @@
 	display: none;
 }
 
+
+	.alpha__text {
+		font-size: 45px;
+		color: #606378;
+		position: absolute;
+		left: 15px;
+		top: 0;
+	}
+
 @media (min-width: 1200px) {
+
+
 
 	.glossary__content-wrap--nomobile {
 		display: flex;
@@ -162,10 +173,10 @@
 		gap: 100px;
 	}
 
-
 	.glossary_title {
 		font-size: 60px;
 		max-width: 583px;
+		display: block;
 	}
 
 
@@ -202,7 +213,7 @@
 
 	.glossary__content-wrap {
 		max-width: 1050px;
-		padding-left: 180px;
+		padding: 0 0 0 180px;
 		width: 100%;
 	}
 
@@ -217,7 +228,6 @@
 
 	.glossary__content {
 		box-sizing: border-box;
-
 	}
 
 	.alpha {
