--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -27,6 +27,7 @@
 @import "components/header-mobile.css";
 @import "components/mobile-menu.css";
 @import "components/glossary/glossary.css";
+@import "components/breadcrumb.css";
 
 
 
