--- a/source/styles/components/breadcrumb.css
+++ b/source/styles/components/breadcrumb.css
@@ -1,11 +1,51 @@
-.breadcrumb ul {
+.breadcrumb {
+	max-width: 328px;
+	text-align: left;
+	padding-left: 52px;
+	position: relative;
+	margin-bottom: 30px;
+	opacity: 0.8;
+}
+
+
+.breadcrumb__menu {
 	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+	padding-left: 0;
 }
 
-.breadcrumb li::before {
+
+.breadcrumb__item:not(:last-child):after {
 	content: ">";
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
-.breadcrumb li:first-child::before {
-	content: "";
+.breadcrumb__back {
+	all: unset;
+	height: 30px;
+	position: absolute;
+	width: 30px;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	background-color: #3D4057;
+	border-radius: 50%;
+}
+
+.breadcrumb__svg {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 5px;
+}
+
+@media (min-width: 1200px) {
+
+	.breadcrumb__svg {
+		position: relative;
+		left: 50%;
+		top: 3px;
+	}
 }
