--- a/source/styles/components/card.css
+++ b/source/styles/components/card.css
@@ -14,7 +14,6 @@
 	display: flex;
 	gap: 20px;
 	align-items: center;
-
 }
 
 .card__text {
@@ -48,6 +47,29 @@
 	text-align: left;
 }
 
+.card__content {
+	width: 100%;
+	max-width: 298px;
+	height: 135px;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	border-radius: 20px;
+}
+
+.card__content--eth {
+	background-image: url('../images/interesting/eth-mob.png');
+}
+
+.card__content--one {
+	background-image: url('../images/interesting/one-mob.png');
+}
+
+.card__content--matic {
+	background-image: url('../images/interesting/matic-mob.png');
+}
+
+
 .card__img_name_portu {
 	background-image: url('../images/content/portu-logo.png');
 	max-width: 334px;
@@ -56,8 +78,6 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: 100%;
-	top: 10%;
-	left: 0;
 }
 
 .card__img_name_adt {
@@ -101,7 +121,6 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	width: 100%;
-
 	background-size: 100%;
 	top: 10%;
 	left: 0;
@@ -160,7 +179,7 @@
 		height: 16px;
 		position: absolute;
 		width: 16px;
-		top: 10%;
+		top: 0;
 		left: 0;
 		background-image: url('../images/interesting/clock.svg');
 	}
@@ -170,16 +189,26 @@
 		text-align: left;
 	}
 
+	.card__content {
+		max-width: 350px;
+		height: 290px;
+	}
+
+.card__content--eth {
+	background-image: url('../images/interesting/eth.png');
+}
+
+.card__content--one {
+	background-image: url('../images/interesting/one.png');
+}
+
+.card__content--matic {
+	background-image: url('../images/interesting/matic.png');
+}
+
 	.card__img_name_portu {
-		background-image: url('../images/content/portu-logo.png');
 		max-width: 630px;
-		width: 100%;
 		height: 250px;
-		background-position: center center;
-		background-repeat: no-repeat;
-		background-size: 100%;
-		top: 10%;
-		left: 0;
 	}
 
 	.card__img_name_adt {
@@ -223,7 +252,6 @@
 		background-position: center center;
 		background-repeat: no-repeat;
 		width: 100%;
-
 		background-size: 100%;
 		top: 10%;
 		left: 0;
