--- a/source/styles/components/interesting/interesting.css
+++ b/source/styles/components/interesting/interesting.css
@@ -1,5 +1,5 @@
 
-@media (max-width: 1200px) {
+
 		.interesting {
 			padding: 30px 0;
 		}
@@ -36,7 +36,7 @@
 			width: 100%;
 			height: 1px;
 		}
-	}
+
 
 
 	@media (min-width: 1200px) {
@@ -58,6 +58,7 @@
 			display: flex;
 			gap: 30px;
 			justify-content: space-between;
+			flex-direction: row;
 		}
 
 		.card__img_media_mobail {
