--- a/source/styles/components/education-2/education-2.css
+++ b/source/styles/components/education-2/education-2.css
@@ -1,3 +1,10 @@
+.education-2__inner {
+	display: flex;
+	flex-direction: column;
+	gap: 13px;
+	padding-top: 15px;
+}
+
 .education-2__card {
 	padding: 51px 9px;
 	min-height: 167px;
@@ -58,9 +65,6 @@
 	text-align: center;
 }
 
-.education-2__inner {
-	padding-top: 15px;
-}
 
 .education-2__title {
 	font-size: 18px;
@@ -86,6 +90,10 @@
 		bottom: 10%;
 		left: 3%;
 		font-size: 14px;
+	}
+
+	.education-2__inner {
+		padding: 30px 0;
 	}
 
 	.education-2__title {
