--- a/source/styles/components/interesting/interesting.css
+++ b/source/styles/components/interesting/interesting.css
@@ -44,6 +44,15 @@
 			padding: 50px 0;
 		}
 
+		.interesting__title {
+			font-size: 42px;
+			max-width: none;
+		}
+
+		.interesting__line {
+			display: none;
+		}
+
 		.interesting__top {
 			display: flex;
 			justify-content: space-between;
