--- a/source/styles/components/header/header.css
+++ b/source/styles/components/header/header.css
@@ -332,7 +332,7 @@ padding: 10px 25px;
 	}
 
 	.header__menu-top {
-		padding: 17px;
+		padding: 17px 0;
 	}
 
 	.header__button-deck {
@@ -405,7 +405,7 @@ padding: 10px 25px;
 	}
 
 	.header__menu-wrap {
-		max-width: 1280px;
+		max-width: 1330px;
 		width: 100%;
 		z-index: 2;
 	}
