--- a/source/styles/base/global.css
+++ b/source/styles/base/global.css
@@ -9,15 +9,16 @@
 	margin: 0;
 }
 
-@media (min-width: 1330px) {
-	.body {
-		font-size: 18px;
-	}
-}
-
 .container {
 	max-width: 1330px;
 	min-width: 325px;
 	margin: 0 auto;
 	padding: 0 15px;
+}
+
+
+@media (min-width: 1330px) {
+	.page__body {
+		font-size: 18px;
+	}
 }
