--- a/source/styles/components/main/hero.css
+++ b/source/styles/components/main/hero.css
@@ -1,19 +1,17 @@
 .hero {
 	min-height: 100vh;
 	background-image: url('../images/main/hero/bg.png');
-	background-position: center center;
+	background-position: bottom center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding-bottom: 30px;
+	padding: 15px 0;
 }
 
 .hero__container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	gap: 16px;
-
 }
 
 .hero__title {
@@ -21,4 +19,29 @@
 	padding-top: 86px;
 	max-width: 328px;
 	line-height: 105.5%;
+}
+
+
+@media (min-width: 1220px) {
+.hero__container {
+	gap: 44px;
+}
+
+
+	.hero__title {
+		font-size: 60px;
+		max-width: 934px;
+		padding-top: 400px;
+	}
+
+
+
+
+
+
+
+
+
+
+
 }
