--- a/source/styles/components/main/main-card.css
+++ b/source/styles/components/main/main-card.css
@@ -72,7 +72,7 @@
 }
 
 .main-card__link-btn--small {
-max-width: 119px;
+	max-width: 119px;
 }
 
 .main-card__link-btn::after {
@@ -86,4 +86,45 @@ max-width: 119px;
 	right: 10px;
 	transform: translateY(-50%);
 	background-image: url('../images/main/last/arrow.svg');
+}
+
+
+@media (min-width: 1220px) {
+	.main-card {
+		padding: 30px;
+	}
+
+	/* .main-card__img {
+
+	} */
+
+	.main-card__button {
+		font-size: 14px;
+		line-height: 13px;
+		padding: 7px 23px;
+	}
+
+	.main-card__title {
+		font-size: 30px;
+		max-width: 534px;
+	}
+
+	.main-card__info {
+		font-size: 14px;
+		gap: 20px;
+
+	}
+
+	.main-card__time {
+		padding-left: 28px;
+		font-size: 18px;
+	}
+
+
+	.main-card__time::before {
+		height: 16px;
+		width: 16px;
+		background-image: url('../images/main/slider/time-desktop.svg');
+	}
+
 }
