--- a/source/styles/components/main/popular.css
+++ b/source/styles/components/main/popular.css
@@ -41,3 +41,84 @@
 	min-height: 135px;
 	background-image: url('../images/main/popular/btc.png');
 }
+
+
+@media (min-width: 1220px) {
+	.popular__title {
+		font-size: 30px;
+		max-width: none;
+	}
+
+	.popular__content {
+		display: flex;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr) 410px;
+		grid-template-rows: repeat(2, 320px) 218px;
+		grid-gap: 30px;
+	}
+
+	.popular__grid-item1 {
+		grid-area: 1 / 1 / 2 / 3;
+		justify-content: space-between;
+	}
+
+	.popular__grid-item2 {
+		grid-area: 1 / 3 / 3 / 4;
+		gap: 30px;
+	}
+
+	.popular__grid-item3 {
+		grid-area: 2 / 1 / 4 / 2;
+		gap: 20px;
+	}
+
+	.popular__grid-item4 {
+		grid-area: 2 / 2 / 3 / 3;
+		justify-content: space-between;
+	}
+
+	.popular__grid-item5 {
+		grid-area: 3 / 2 / 4 / 4;
+		flex-direction: row;
+	}
+
+	.popular__img--btc {
+		order: -1;
+		max-width: 344px;
+		width: 100%;
+	}
+
+	.popular__main-card-info {
+		position: absolute;
+		top: 30px;
+		left: 50%;
+	}
+
+	.popular__main-card-title {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 50%;
+	}
+
+	.popular__main-card-link--end {
+		position: absolute;
+		bottom: 30px;
+		left: 50%;
+	}
+
+
+	.popular__img--binance {
+		min-height: 268px;
+		border-radius: 20px;
+	}
+
+	.popular__main-card-link {
+		position: absolute;
+		bottom: 30px;
+	}
+
+	.popular__img--mean {
+		min-height: 290px;
+	}
+}
