--- a/source/styles/components/main/popular.css
+++ b/source/styles/components/main/popular.css
@@ -1,6 +1,7 @@
 .popular {
 	text-align: left;
 	margin-bottom: 30px;
+
 }
 
 .popular__top {
@@ -25,6 +26,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
+	padding-bottom: 30px;
 }
 
 .popular__img--binance {
