--- a/source/styles/components/main/slider.css
+++ b/source/styles/components/main/slider.css
@@ -4,14 +4,15 @@
 }
 
 .swiper {
-	max-width: 1289px;
+	max-width: 1500px;
 	min-height: 290px;
+	position: relative;
 }
 
 .swiper-wrapper {
 	gap: 12px;
+	max-width: 1289px;
 }
-
 
 .slide__img--slide {
 	min-height: 165px;
@@ -29,7 +30,7 @@
 	.slide__img--slide {
 		max-width: 671px;
 		min-height: 290px;
-			background-image: url('../images/main/slider/desktop-img.jpg');
+		background-image: url('../images/main/slider/desktop-img.jpg');
 	}
 
 	.slide__img-link {
@@ -51,4 +52,34 @@
 		position: absolute;
 		font-size: 42px;
 	}
+
+	.swiper-slide {
+		max-width: 1289px;
+		margin-left: auto;
+	}
+
+
+
+	.swiper-button {
+		width: 55px;
+		height: 55px;
+		background-color: rgba(61, 64, 87, 1);
+		border-radius: 50px;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-image: url('../images/main/slider/button-prev.svg');
+	}
+
+	.swiper-button-prev::after {
+		display: none;
+	}
+
+	.swiper-button-next {
+		transform: rotate(-180deg);
+	}
+
+	.swiper-button-next::after {
+		display: none;
+	}
+
 }
