--- a/source/styles/components/filter.css
+++ b/source/styles/components/filter.css
@@ -1,3 +1,139 @@
+/* .custom-checkbox {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+
+
+
+.custom-checkbox+label {
+	display: inline-flex;
+	align-items: center;
+	user-select: none;
+}
+
+.custom-checkbox+label::before {
+	content: '';
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	flex-shrink: 0;
+	flex-grow: 0;
+	border: 1px solid #adb5bd;
+	border-radius: 0.25em;
+	margin-right: 0.5em;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 50% 50%;
+}
+
+
+.custom-checkbox:checked+label::before {
+	content: '✓';
+}
+ */
+
+/* для элемента input c type="radio" */
+.custom-radio>input {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+
+.custom-radio {
+	position: relative;
+}
+
+/* для элемента label связанного с .custom-radio */
+.custom-radio>span {
+	display: inline-flex;
+	align-items: center;
+	user-select: none;
+	background-color: rgba(255, 255, 255, 1);
+	border-radius: 50px;
+	color: rgba(33, 41, 67, 1);
+	padding: 6px 33px 6px 19px;
+}
+
+/* создание в label псевдоэлемента  before со следующими стилями */
+.custom-radio>span::before {
+	content: '+';
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	flex-shrink: 0;
+	flex-grow: 0;
+
+	border-radius: 50%;
+	margin-right: 0.5em;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 50% 50%;
+	position: absolute;
+	right: 0;
+	top: 7px;
+
+
+}
+
+/* стили при наведении курсора */
+/* .custom-radio>input:not(:disabled):not(:checked)+span:hover::before {
+	border-color: #b3d7ff;
+
+} */
+
+/* стили для активной радиокнопки (при нажатии на неё) */
+/* .custom-radio>input:not(:disabled):active+span::before {
+	background-color: #b3d7ff;
+	border-color: #b3d7ff;
+
+} */
+
+/* стили для радиокнопки, находящейся в фокусе */
+/* .custom-radio>input:focus+span::before {
+
+
+} */
+
+/* стили для кнопки, находящейся в фокусе и не находящейся в состоянии checked */
+.custom-radio>input:focus:not(:checked)+span::before {
+	content: '+';
+}
+
+/* стили для кнопки, находящейся в состоянии checked */
+.custom-radio>input:checked+span::before {
+	content: '✓';
+}
+
+/* стили для радиокнопки, находящейся в состоянии disabled */
+/* .custom-radio>input:disabled+span::before {
+	background-color: #e9ecef;
+
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .filter__all-desktop {
 	display: none;
 }
@@ -168,11 +304,11 @@
 	background-image: url('../images/filter/trash.svg');
 }
 
-	.filter__bottom-inner {
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-	}
+.filter__bottom-inner {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
 
 @media (min-width: 1200px) {
 
@@ -189,22 +325,22 @@
 		display: inline-flex;
 	}
 
-.filter__button-hide {
-	position: relative;
-}
+	.filter__button-hide {
+		position: relative;
+	}
 
 	.filter__button-hide:after {
-    content: " ";
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 6px;
-    border-radius: 50%;
-    position: absolute;
-    width: 9px;
-    top: 50%;
-    left: 0;
-    background-image: url(../images/footer/arrow.svg);
-    opacity: .5;
+		content: " ";
+		background-position: center center;
+		background-repeat: no-repeat;
+		height: 6px;
+		border-radius: 50%;
+		position: absolute;
+		width: 9px;
+		top: 50%;
+		left: 0;
+		background-image: url(../images/footer/arrow.svg);
+		opacity: .5;
 	}
 
 
