--- a/source/styles/components/main/hero.css
+++ b/source/styles/components/main/hero.css
@@ -4,7 +4,7 @@
 	background-position: bottom center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding: 15px 0;
+	padding: 15px 0 100px 0;
 }
 
 .hero__container {
