--- a/source/styles/components/filter.css
+++ b/source/styles/components/filter.css
@@ -49,10 +49,14 @@
 	display: inline-flex;
 	align-items: center;
 	user-select: none;
-	background-color: rgba(255, 255, 255, 1);
+	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 50px;
 	color: rgba(33, 41, 67, 1);
-	padding: 6px 33px 6px 19px;
+	padding: 6px 23px 6px 19px;
+}
+
+.custom-radio>span:focus {
+	background-color: rgba(255, 255, 255, 1);
 }
 
 /* создание в label псевдоэлемента  before со следующими стилями */
@@ -63,37 +67,32 @@
 	height: 1em;
 	flex-shrink: 0;
 	flex-grow: 0;
-
 	border-radius: 50%;
-	margin-right: 0.5em;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 50% 50%;
 	position: absolute;
 	right: 0;
 	top: 7px;
-
-
 }
 
 /* стили при наведении курсора */
-/* .custom-radio>input:not(:disabled):not(:checked)+span:hover::before {
-	border-color: #b3d7ff;
+.custom-radio>input:not(:disabled):not(:checked)+span:hover::before {
+	background-color: rgba(255, 255, 255, 1);
 
-} */
+}
 
 /* стили для активной радиокнопки (при нажатии на неё) */
-/* .custom-radio>input:not(:disabled):active+span::before {
-	background-color: #b3d7ff;
-	border-color: #b3d7ff;
+.custom-radio>input:not(:disabled):active+span::before {
+background-color: rgba(255, 255, 255, 1);
 
-} */
+}
 
 /* стили для радиокнопки, находящейся в фокусе */
-/* .custom-radio>input:focus+span::before {
+.custom-radio>input:focus+span::before {
+background-color: rgba(255, 255, 255, 1);
 
-
-} */
+}
 
 /* стили для кнопки, находящейся в фокусе и не находящейся в состоянии checked */
 .custom-radio>input:focus:not(:checked)+span::before {
@@ -106,10 +105,10 @@
 }
 
 /* стили для радиокнопки, находящейся в состоянии disabled */
-/* .custom-radio>input:disabled+span::before {
-	background-color: #e9ecef;
+.custom-radio>input:disabled+span::before {
+	background-color: rgba(255, 255, 255, 1);
 
-} */
+}
 
 
 
