--- a/source/styles/components/main/slider.css
+++ b/source/styles/components/main/slider.css
@@ -3,8 +3,15 @@
 	display: none;
 }
 
-.swiper {
+.slider {
 	max-width: 1500px;
+	width: 100%;
+	position: relative;
+	display: inline-flex;
+}
+
+.swiper {
+	max-width: 1280px;
 	min-height: 290px;
 	position: relative;
 }
@@ -53,14 +60,6 @@
 		font-size: 42px;
 	}
 
-	.swiper-slide {
-		max-width: 1289px;
-		margin-left: auto;
-	}
-
-	.swiper-wrapper {
-gap: 24%;
-	}
 
 
 	.swiper-button {
